# target_detection

./: README.md
pointcloud_processing/: CMakeLists.txt  package.xml
pointcloud_processing/launch/: pcl_processing.launch
pointcloud_processing/pointcloud_processing/: CMakeLists.txt  package.xml
pointcloud_processing/pointcloud_processing/launch/: pcl_processing.launch  sep_processing.launch
pointcloud_processing/pointcloud_processing/src/: pcl_processing.cpp  people_processing.cpp  pointcloud_processing.cpp  sep_processing.cpp
pointcloud_processing/pointcloud_processing_msgs/: CMakeLists.txt  package.xml
pointcloud_processing/pointcloud_processing_msgs/msg/: ObjectInfo.msg  handle_position.msg  target_position.msg
pointcloud_processing/src/: multiview_estimation.cpp  pcl_processing.cpp  sep_processing.cpp
pointcloud_processing_msgs/: CMakeLists.txt
pointcloud_processing_msgs/msg/: fov_positions.msg
pointcloud_processing_msgs/srv/: get_targetpose.srv  register_scene.srv
rviz_tools_py/: CMakeLists.txt  package.xml
rviz_tools_py/example/: demo.py  fov_demo.py
rviz_tools_py/src/rviz_tools_py/: geometry_tools.py  rviz_tools.py
target_detection/: CMakeLists.txt  package.xml
target_detection/config/: pose_estimation.yaml
target_detection/launch/: pose_estimation.launch  target_detection.launch
transform_pointcloud/launch/: transform.launch
transform_pointcloud/src/: transform_pointcloud_nodelet.cpp
yolocloud/: CMakeLists.txt  package.xml
yolocloud/action/: GetContext.action
yolocloud/config/: kinect_world.urdf  parameters.yaml
yolocloud/include/villa_yolocloud/: ContextCloud.h  YoloCloud.h
yolocloud/launch/: context.launch  target_detection.launch  viz_camera.launch
yolocloud/msg/: BboxInfo.msg  DetectedObject.msg  ObjectInfo.msg  ObjectInfoArray.msg
yolocloud/scripts/: armarker_test.py  object_marker.py
yolocloud/src/: ContextCloud.cpp  YoloCloud.cpp  context_cloud_node.cpp  yolocloud_node.cpp
yolocloud/srv/: GetEntities.srv  GetObjects.srv  GetShelfObjects.srv
