<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_processing</name>
  <version>0.0.0</version>
  <description>The pointcloud_processing package</description>
  <maintainer email="steveminq@utexas.edu">Minkyu Kim</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pointcloud_processing_msgs</depend>
  <depend>tf</depend>   
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
