<?xml version="1.0"?>
<package format="2">
  <name>target_detection</name>
  <version>0.0.0</version>
  <description>The target detection launch package</description>
  <maintainer email="chriswsuarez@utexas.edu">Chris Suarez</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>catkin</depend>
  <depend>realsense2_camera</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
